--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li>Youtube</li>
             <li>Google</li>
             <li>Esedu</li>
+            <li>KasvuEsedu</li>
         </ol>
         <p>Lorem ipsum dolor sit amet.</p>
     </section>
