--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li>Google</li>
             <li>Esedu</li>
             <li>KasvuEsedu</li>
+            <li>KasvuEsedu</li>
         </ol>
         <p>Lorem ipsum dolor sit amet.</p>
     </section>
